tests/should_succeed/unused_argument.jou
def foo(asd: bool) -> void:
    return

def main() -> int:
    foo(True)
    return 0
