tests/should_fail/long_type_name.jou
def foo(x: int****************************************************************************************************) -> int:  # Error: type name too long
    return 1
